Fixed date not showing up

--- a/applications/PicLocal/static/sass/index.scss
+++ b/applications/PicLocal/static/sass/index.scss
@@ -164,6 +164,7 @@ header{
                 font-size: 14px;
                 top: 10px;
                 position: relative;
+                color: black;
             }
         }
 
